2011-11-30  Murray Cumming  <murrayc@murrayc.com>

	test_document_load_and_change: Test print layout removal.

	* tests/test_document_load_and_change.cc:

2011-11-30  Murray Cumming  <murrayc@murrayc.com>

	Updated the Document DTD.

	* glom/glom_document.dtd: This fixes make check with the new save of 
	examples/example_film_manager.glom.

2011-11-30  Murray Cumming  <murrayc@murrayc.com>

	self-hosting tests: Avoid some noisy stdout messages.

	* tests/test_selfhosting_utils.cc: Do not show PostgreSQL startup, etc,
	progress messages.

2011-11-30  Murray Cumming  <murrayc@murrayc.com>

	test_document_load: Test print layout functions.

	* examples/example_film_manager.glom: Add a contacts print layout and 
	resave this.
	* tests/test_document_load.cc: Test the print layout data.

2011-11-30  Murray Cumming  <murrayc@murrayc.com>

	test_load_and_change(): Test removal of a relationship.

	* tests/test_document_load_and_change.cc: Test Document::remove_relationship().

2011-11-30  Murray Cumming  <murrayc@murrayc.com>

	test_document_load: Test field formatting.

	* tests/test_document_load.cc: Also use a different example, to
  widen the range of examples that we test.

2011-11-29  Murray Cumming  <murrayc@murrayc.com>

	test_document_change: Test a little more API.

	* tests/test_document_change.cc: Add a table and test some API that uses it.
  We could do much more here.

2011-11-29  Murray Cumming  <murrayc@murrayc.com>

	test_document_load_and_change: Test Document::remove_field() too.

	* tests/test_document_load_and_change.cc: Exercise a little more of the API.

2011-11-29  Murray Cumming  <murrayc@murrayc.com>

	LayoutGroup: Add a more useful remove_field().

	* glom/libglom/data_structure/layout/layoutgroup.[h|cc]:
  Add a remove_field(parent_table_name, table_name, field_name) method overload,
  deprecating the existing method overloads.
	* glom/libglom/document/document.cc: Adapt.
	* tests/test_document_load_and_change.cc: Test a different example,